[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Extensions/UVHelperPack/elements/ApplyMapDialog/ApplyMap.gd" type="Script" id=1]
[ext_resource path="res://src/UI/TransparentChecker.tscn" type="PackedScene" id=2]

[node name="ApplyMap" type="ConfirmationDialog"]
margin_right = 294.0
margin_bottom = 296.0
rect_min_size = Vector2( 172, 60.2 )
window_title = "Apply Map to UV"
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 394.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
margin_right = 315.0
margin_bottom = 204.0
size_flags_vertical = 3

[node name="Preview" type="TextureRect" parent="VBoxContainer/AspectRatioContainer"]
margin_left = 55.5
margin_right = 259.5
margin_bottom = 204.0
rect_min_size = Vector2( 200, 200 )
expand = true
stretch_mode = 5

[node name="TransparentChecker" parent="VBoxContainer/AspectRatioContainer/Preview" instance=ExtResource( 2 )]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Load" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 315.0
margin_bottom = 228.0
text = "Load Map"

[node name="OptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 315.0
margin_bottom = 252.0
alignment = 1

[node name="AffectOptionButton" type="OptionButton" parent="VBoxContainer/OptionsContainer"]
margin_left = 100.0
margin_right = 214.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Selected cels"
items = [ "Selected cels", null, false, 0, null, "Current frame", null, false, 1, null, "All frames", null, false, 2, null, "All projects", null, false, 3, null ]
selected = 0

[node name="SelectionCheckBox" type="CheckBox" parent="VBoxContainer/OptionsContainer"]
visible = false
margin_left = 204.0
margin_right = 228.0
margin_bottom = 24.0
disabled = true

[node name="MapLoader" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 394.0
margin_bottom = 260.0
rect_min_size = Vector2( 172, 60.2 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG Image", "*.bmp ; BMP Image", "*.hdr ; Radiance HDR Image", "*.jpg,*.jpeg ; JPEG Image", "*.svg ; SVG Image", "*.tga ; TGA Image", "*.webp ; WebP Image" )
current_dir = "/home/variable/Documents/Godot/Godot projects/Pixelorama-master"
current_path = "/home/variable/Documents/Godot/Godot projects/Pixelorama-master/"

[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="file_selected" from="MapLoader" to="." method="_on_MapLoader_file_selected"]
